--- a/src/main/resources/templates/create-citation.html
+++ b/src/main/resources/templates/create-citation.html
@@ -10,8 +10,8 @@
             <nav th:replace="fragments/nav"></nav>
             <form method="POST" th:action="@{/citation}">
                 <div class="form-group">
-                    <label for="type">Select type</label>
-                    <select name="type" id="type" v-model="type" class="form-control" v-on:change="refreshTooltips">
+                    <label for="citationType">Select type</label>
+                    <select name="citationType" id="citationType" v-model="type" class="form-control" v-on:change="refreshTooltips">
                         <option value="article">Article</option>
                         <option value="book">Book</option>
                         <option value="booklet">Booklet</option>
