File download into file

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="col-md-8">
                     <a href="{{downloadLink}}" class="btn btn-primary btn-block" target="_blank">
-                      <span class="glyphicon glyphicon-download-alt"></span> Download (at the moment into browser)
+                      <span class="glyphicon glyphicon-download-alt"></span> Download
                     </a>
                 </div>
             </div>
