--- a/src/main/resources/templates/create-citation.html
+++ b/src/main/resources/templates/create-citation.html
@@ -87,7 +87,7 @@
                 </div>
                 
                 <!-- Inbook -->
-                <div v-if="type=='inbook'" th:with="citation=${inbookCitation}">$('[data-toggle="tooltip"]').tooltip()
+                <div v-if="type=='inbook'" th:with="citation=${inbookCitation}">
                     <div class="form-group" th:each="field,iterationStatus : ${citation.getRequiredFields()}" th:with="type=${citation.getCitationType()}">
                         <label th:attr="for=${type}+'-'+${field}" th:text="${#strings.toUpperCase(field)}"></label> <span class="text-danger" data-toggle="tooltip" data-placement="right" title="This field is required">*</span>
                         
@@ -180,6 +180,20 @@
                     <div class="form-group" th:each="field,iterationStatus : ${citation.getOptionalFields()}" th:with="type=${citation.getCitationType()}">
                         <label th:attr="for=${type}+'-'+${field}" th:text="${#strings.toUpperCase(field)}"></label>
                         
+                        <input class="form-control" th:name="${field}" th:id="${type}+'-'+${field}" th:value="*{citation.getClass().getField(field).get(citation)}" th:attr="placeholder='Set '+${#strings.capitalize(type)}+'\'s ' + ${#strings.capitalize(field)} + ' field'" />
+                    </div>
+                </div>
+
+                <!-- Proceedings -->
+                <div v-if="type=='proceedings'" th:with="citation=${proceedingsCitation}">
+                    <div class="form-group" th:each="field,iterationStatus : ${citation.getRequiredFields()}" th:with="type=${citation.getCitationType()}">
+                        <label th:attr="for=${type}+'-'+${field}" th:text="${#strings.toUpperCase(field)}"></label> <span class="text-danger" data-toggle="tooltip" data-placement="right" title="This field is required">*</span>
+
+                        <input class="form-control" th:name="${field}" th:id="${type}+'-'+${field}" th:value="*{citation.getClass().getField(field).get(citation)}" th:attr="placeholder='Set '+${#strings.capitalize(type)}+'\'s ' + ${#strings.capitalize(field)} + ' field'"  required="required" />
+                    </div>
+                    <div class="form-group" th:each="field,iterationStatus : ${citation.getOptionalFields()}" th:with="type=${citation.getCitationType()}">
+                        <label th:attr="for=${type}+'-'+${field}" th:text="${#strings.toUpperCase(field)}"></label>
+
                         <input class="form-control" th:name="${field}" th:id="${type}+'-'+${field}" th:value="*{citation.getClass().getField(field).get(citation)}" th:attr="placeholder='Set '+${#strings.capitalize(type)}+'\'s ' + ${#strings.capitalize(field)} + ' field'" />
                     </div>
                 </div>
