You can now edit citations

--- a/src/main/resources/templates/create-citation.html
+++ b/src/main/resources/templates/create-citation.html
@@ -227,7 +227,7 @@
                 </div>
                 
                 <hr/>
-                <button type="submit" class="btn btn-primary">Lisää uusi Viite</button>
+                <button type="submit" class="btn btn-primary btn-block">Lisää uusi Viite</button>
             </form>
         </div>
         
