--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -115,11 +115,31 @@
                 </div>
                 <div class="col-md-8">
                     <a href="{{downloadLink}}" class="btn btn-primary btn-block" target="_blank">
-                      <span class="glyphicon glyphicon-download-alt"></span> Download
+                      <span class="glyphicon glyphicon-download"></span> Download
                     </a>
                 </div>
             </div>
         </div>
+ 	<div th:if="${message}">
+            <h2 th:text="${message}"/>
+	</div>
+
+	<div>
+            <form method="POST" enctype="multipart/form-data" action="/upload">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <input class="form-control" type="file" name="file" />
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <span class="input-group-btn">
+                        <button class="btn btn-primary btn-block" type="submit"><span class="glyphicon glyphicon-upload"></span> Upload</button>
+                    </span>
+                </div>
+            </div>
+            </form>
+	</div>
     </div>
 
     <script th:replace="fragments/scripts">scripts</script>
