Prevent adding same ID

--- a/src/main/resources/templates/create-citation.html
+++ b/src/main/resources/templates/create-citation.html
@@ -101,7 +101,7 @@
                 </div>
                 
                 <hr/>
-                <button type="submit" class="btn btn-primary btn-block">Lisää uusi Viite</button>
+                <button type="submit" v-bind:disabled="notValidId" class="btn btn-primary btn-block">Lisää uusi Viite</button>
             </form>
         </div>
         
