--- a/src/main/resources/templates/edit-citation.html
+++ b/src/main/resources/templates/edit-citation.html
@@ -29,7 +29,7 @@
                 </div>
                 
                 <hr/>
-                <button type="submit" class="btn btn-success btn-block">Päivitä viite</button>
+                <button type="submit" v-bind:disabled="notValidId" class="btn btn-success btn-block">Päivitä viite</button>
             </form>
         </div>
         
