upload bibtex story

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -134,7 +134,7 @@
                 </div>
                 <div class="col-md-8">
                     <span class="input-group-btn">
-                        <button class="btn btn-primary btn-block" type="submit"><span class="glyphicon glyphicon-upload"></span> Upload</button>
+                        <button class="btn btn-primary btn-block" name="upload" type="submit"><span class="glyphicon glyphicon-upload"></span> Upload</button>
                     </span>
                 </div>
             </div>
