--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -26,5 +26,9 @@
             border:0;
             background:transparent;
         }
+        .container.white-bg {
+            background: white;
+            padding: 15px;
+        }
     </style>
 </head>
