--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" media="screen" />
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'/>
 
     <link href="css/font-awesome.min.css" th:href="@{/css/font-awesome.min.css}" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css" rel="stylesheet"/>
@@ -29,6 +30,28 @@
         .container.white-bg {
             background: white;
             padding: 15px;
+        }
+        
+        @-webkit-keyframes pulsate {
+            from { color: #046D8B; }
+            to { color: #2FB8AC; }
+        }
+        @-moz-keyframes pulsate {
+            from { color: #046D8B; }
+            to { color: #2FB8AC; }
+        }
+        @keyframes pulsate {
+            from { color: #046D8B; }
+            to { color: #2FB8AC; }
+        }
+        
+        .logo {
+            color: #046D8B;
+            font-family: 'Kaushan Script', cursive;
+            -webkit-animation: pulsate 2s infinite alternate;
+            -moz-animation: pulsate 2s infinite alternate;
+            -animation: pulsate 2s infinite alternate;
+            font-size: 25px;
         }
     </style>
 </head>
